--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <li>Scan the QR code with a mobile device to mirror the chart to do the near/far accommodation exercise.</li>
       <li>Decoding exercise
         <ul>
-          <li>Work in progress</li>
+          <li>Click the code coordinates to enable typing</li>
           <li>Corresponding row/column is highlighted when hovering over each code item.</li>
           <li>Full answer is displayed when hovering over the code for a couple seconds.</li>
         </ul>
@@ -170,9 +170,11 @@
   <h3 id="blocks"><a href="blocks.html">Pattern Blocks</a></h3>
   <div>
     <ul>
-      <li>Work in progress</li>
+      <li>(Work in progress)</li>
       <li>Drag tiles into the play area</li>
+      <li>Click to rotate</li>
       <li>Incorrectly placed tile will be tinted red.</li>
+      <li>Drag tile over existing tiles to swap places (swapped tile gets bumped back to the tray)</li>
     </ul>
   </div>
 
