--- a/blocks.html
+++ b/blocks.html
@@ -330,6 +330,7 @@ DONE:
 - error check *FORMER* neighbors when moved away - partial
 - swap places
 - reset button
+- touch enabled
 
 TODO:
 - resizable grid setting
