--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       <li>Click to rotate</li>
       <li>Incorrectly placed tile will be tinted red.</li>
       <li>Drag tile over existing tiles to swap places (swapped tile gets bumped back to the tray)</li>
+      <li>Touch enabled</li>
     </ul>
   </div>
 
