--- a/blocks.html
+++ b/blocks.html
@@ -227,11 +227,12 @@
           document.body.append(clone);
           clone.style.position = "fixed";
           clone.style.transition = "none";
-          tile.ontouchmove = function (e) {
+          tile.addEventListener("touchmove", function (e) {
+            e.preventDefault();
             // console.log(e.touches[0].clientX,e.touches[0].clientY);
             clone.style.left = (e.touches[0].clientX - clone.clientWidth / 2) + "px";
             clone.style.top = (e.touches[0].clientY - clone.clientHeight / 2) + "px";
-          };
+          } ); //, { passive: false } );
 
           tile.ontouchend = function (e) {
             // console.log(e);
