--- a/blocks.html
+++ b/blocks.html
@@ -193,12 +193,69 @@
 12348
 157`.trim().split("\n");
     //36
+    let tileholder = document.querySelector("#tileholder");
+    let playfield = document.querySelector("#playfield");
 
     showchart();
+    let sourcetile, clone;
+    document.addEventListener("touchstart", function (e) {
+
+      sourcetile = e.target;
+      if (e.touches.length == 1 && sourcetile.tagName == "BL-OCK") {
+        e.preventDefault();
+        let movefrom = sourcetile.parentElement;
+        clone = e.target.cloneNode(true);
+        document.body.append(clone);
+        clone.style.position = "fixed";
+        clone.style.transition = "none";
+        let firsttouch = e.touches[0];
+        sourcetile.addEventListener("touchmove", function (e) {
+          e.preventDefault();
+          // console.log(e.touches[0].clientX,e.touches[0].clientY);
+          clone.style.left = (e.touches[0].clientX - clone.clientWidth / 2) + "px";
+          clone.style.top = (e.touches[0].clientY - clone.clientHeight / 2) + "px";
+        }, { passive: false });
+
+        sourcetile.ontouchend = function (e) {
+
+          let firstx = firsttouch.clientX;
+          let firsty = firsttouch.clientY;
+          let endx = e.changedTouches[0].clientX;
+          let endy = e.changedTouches[0].clientY;
+          console.log(firsttouch, e.changedTouches[0], firsttouch == e.changedTouches[0]);
+          console.log(Math.trunc(firstx / 10), Math.trunc(endx / 10));
+          console.log(firsty, endy);
+          if (Math.trunc(firstx / 10) == Math.trunc(endx / 10)
+            && Math.trunc(firsty / 10) == Math.trunc(endy / 10)) {
+            sourcetile.click();
+          } else {
+            for (const el of document.elementsFromPoint(e.changedTouches[0].clientX, e.changedTouches[0].clientY)) {
+              if (el.classList.contains("playslot")) {
+
+                let existingtile = el.querySelector("bl-ock");
+                if (existingtile && existingtile != sourcetile) {
+                  // swap places
+                  el.append(sourcetile);
+                  tileholder.append(existingtile);
+                } else {
+                  // insert it
+                  el.append(sourcetile);
+                }
+                sourcetile.checker();
+                if (movefrom) sourcetile.checker(movefrom.dataset.x, movefrom.dataset.y);
+
+                break;
+              }
+            }
+          }
+          clone.remove();
+        };
+      }
+    }, { passive: false });
+
+
 
     function showchart() {
-      let tileholder = document.querySelector("#tileholder");
-      let playfield = document.querySelector("#playfield");
       tileholder.innerHTML = playfield.innerHTML = "";
 
       for (let b of blocks) {
@@ -218,46 +275,6 @@
           e.dataTransfer.setData("movefrom", [e.target.parentElement.dataset.x, e.target.parentElement.dataset.y]);
 
         });
-
-        let sourcetile, clone;
-        tile.addEventListener("touchstart", function (e) {
-          sourcetile = e.target;
-          clone = e.target.cloneNode(true);
-          document.body.append(clone);
-          clone.style.position = "fixed";
-          clone.style.transition = "none";
-          tile.addEventListener("touchmove", function (e) {
-            e.preventDefault();
-            // console.log(e.touches[0].clientX,e.touches[0].clientY);
-            clone.style.left = (e.touches[0].clientX - clone.clientWidth / 2) + "px";
-            clone.style.top = (e.touches[0].clientY - clone.clientHeight / 2) + "px";
-          }, { passive: false } );
-
-          tile.ontouchend = function (e) {
-            // console.log(e);
-            for (const el of document.elementsFromPoint(e.changedTouches[0].clientX, e.changedTouches[0].clientY)) {
-              if (el.classList.contains("playslot")) {
-
-                let existingtile = el.querySelector("bl-ock");
-                if (existingtile && existingtile != sourcetile) {
-                  el.append(sourcetile);
-                  tileholder.append(existingtile);
-                  break;
-                } else {
-
-                  console.log(el, sourcetile);
-                  el.append(sourcetile);
-                  break;
-                }
-              }
-              clone.remove();
-            }
-
-          };
-
-
-        }, { passive: false });
-
 
       }
 
@@ -293,12 +310,8 @@
 
           thisblock.checker();
           let movefrom = e.dataTransfer.getData("movefrom").split(",");
-          // console.log(movefrom);
           if (movefrom[0]) thisblock.checker(movefrom[0], movefrom[1]);
-          // let fromspot = playfield.querySelector(`.playslot[data-x='${movefrom[0]}'][data-y='${movefrom[1]}'] bl-ock`);
-          // if (fromspot) fromspot.checker();
-
-          // thisblock.checker(movefrom);
+          // console.log(movefrom);
 
         } else if (e.target.tagName == "BL-OCK"
           && e.target != thisblock
