--- a/blocks.html
+++ b/blocks.html
@@ -236,7 +236,9 @@
         let tile = document.createElement("bl-ock");
         tile.value = b;
         tileholder.append(tile);
-        tile.rotatestate(Math.floor(Math.random() *4));
+        tile.rotatestate(Math.floor(Math.random() * 4));
+        // tile.setAttribute("initstate", Math.floor(Math.random() * 4));
+
         tile.setAttribute("draggable", true);
         tile.addEventListener("dragstart", function (e) {
           // console.log(e);
