--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="darkreader-lock">
 
   <link rel="stylesheet" href="vision.css">
-  <script src="settings.js"></script>
+  <script src="commonfn.js"></script>
+  <script defer src="settings.js"></script>
 
   <style>
     body {
