--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </ul>
   </div>
 
-  <h3 id="tracking><a href="lettertracking.html">Letter Tracking</a></h3>
+  <h3 id="tracking"><a href="lettertracking.html">Letter Tracking</a></h3>
   <div>
     <ul>
       <li>Target word count of 70
