--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       <li>Decoding exercise
         <ul>
           <li>Click the code coordinates to enable typing</li>
-          <li>Corresponding row/column is highlighted when hovering over each code item.</li>
           <li>Full answer is displayed when hovering over the code for a couple seconds.</li>
+          <li>If hints are enabled then the corresponding row/column is highlighted when hovering over each code item.</li>
         </ul>
       </li>
     </ul>
@@ -124,6 +124,9 @@
     <ul>
       <li>Target word count of 70
         <ul>
+
+<li>Find each letter of the alphabet in order.</li>
+<li>Timer will start automatically on first click, and stop when all letters have been accounted for.</li>
           <li>If all letters are not shown within target word count, the script will continue generating words until all letters are accounted for.</li>
         </ul>
       </li>
