vertically center fusion cards

--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -45,6 +45,8 @@
     #circles.fusion {
 
       /* filter: brightness(0) saturate(0);*/
+      margin-top: calc(50vh - 5em - var(--glyphsize));
+
       * {
         mix-blend-mode: normal;
       }
