--- a/index.html
+++ b/index.html
@@ -173,12 +173,14 @@
   <h3 id="blocks"><a href="blocks.html">Pattern Blocks</a></h3>
   <div>
     <ul>
-      <li>(Work in progress)</li>
       <li>Drag tiles into the play area</li>
-      <li>Click to rotate</li>
+      <li>Click to rotate
+        <ul>
+          <li>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</li>
+        </ul>
+      </li>
       <li>Incorrectly placed tile will be tinted red.</li>
       <li>Drag tile over existing tiles to swap places (swapped tile gets bumped back to the tray)</li>
-      <li>Touch enabled</li>
     </ul>
   </div>
 
