--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 
   <div id="ctrlbar">
-    <div id="homelogo"><img src="logo.svg" /></div>
+    <div id="homelogo"><img src="img/logo.svg" /></div>
     <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
 
   </div>
@@ -66,6 +66,7 @@
   <li><a href="#glyphs">Tranaglyphs / Fusion cards</a></li>
   <li><a href="#lines">Line counting</a></li>
   <li><a href="#blocks">Pattern Blocks</a></li>
+  <li><a href="#spotmatch">Spot the Match</a></li>
 </ul>
 
   <hr/>
@@ -184,6 +185,16 @@
     </ul>
   </div>
 
+<h3 id="spotmatch"><a href="spotmatch.html">Spot the Match</a></h3>
+<div>
+  <ul>
+    <li>Spot the matching figure. Each generated pair has one matching image. Click it to generate a new pair of cards.</li>
+  </ul>
+</div>
+<br/>
+<br/>
+<br/>
+<br/>
 </body>
 
 </html>
