--- a/blocks.html
+++ b/blocks.html
@@ -149,7 +149,7 @@
 
 <body>
   <div id="ctrlbar">
-    <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
+    <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
 
     <div><input type="checkbox" class="slider" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
     <button id="reload">New Chart</button>
