--- a/cpsaccades.html
+++ b/cpsaccades.html
@@ -51,7 +51,7 @@ color: var(--colorfg);
 <body>
 
   <div id="ctrlbar">
-    <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
+    <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
 
     <div><input type="checkbox" class="slider" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
 
