--- a/lines.html
+++ b/lines.html
@@ -47,7 +47,7 @@
 
 <body>
   <div id="ctrlbar">
-    <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
+    <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
     <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
 
     <button id="reload">New Chart</button>
