--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -8,7 +8,7 @@
   <meta name="darkreader-lock" />
 
   <link rel="stylesheet" href="vision.css" />
-  <script src="settings.js"></script>
+  <script defer src="settings.js"></script>
 
   <style>
     :root {
@@ -251,7 +251,7 @@
 <body>
 
   <div id="ctrlbar">
-    <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
+    <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
     <div><input type="checkbox" class="slider" id="fusion" /><label for="fusion">Fusion mode</label></div>
     <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
   </div>
