--- a/spotmatch.html
+++ b/spotmatch.html
@@ -51,7 +51,7 @@
         grid-gap: 1em;
 
         .spot {
-          background: var(--tranared);
+          background: var(--spotbg);
           height: var(--imgsize);
           width: var(--imgsize);
           mask-size: contain;
@@ -69,12 +69,7 @@
         background-color: var(--highlight);
       }
 
-
-      
-
-
     }
-
 
   </style>
 
